--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "ng2-scroll-to-el": "^1.2.1",
+    "ngx-bootstrap": "^5.3.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
